# SFML

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: ci.yml
benchmarks/: Benchmark.cpp  CMakeLists.txt
cmake/: CompilerWarnings.cmake  Config.cmake  FindCatch2.cmake  Format.cmake  Macros.cmake  SFMLConfigDependencies.cmake.in
doc/: CMakeLists.txt
examples/X11/: X11.cpp
examples/android/app/src/main/jni/: main.cpp
examples/event_handling/: EventHandling.cpp
examples/island/: CMakeLists.txt  Island.cpp
examples/joystick/: Joystick.cpp
examples/keyboard/: Keyboard.cpp
examples/opengl/: OpenGL.cpp
examples/shader/: Shader.cpp
examples/sockets/: Sockets.cpp  TCP.cpp  UDP.cpp
examples/sound_effects/: SoundEffects.cpp
examples/stencil/: Stencil.cpp
examples/tennis/: Tennis.cpp
examples/voip/: Client.cpp  Server.cpp
examples/vulkan/: CMakeLists.txt  Vulkan.cpp
examples/win32/: Win32.cpp
examples/window/: Window.cpp
include/SFML/: Config.hpp
include/SFML/Audio/: InputSoundFile.hpp  Listener.hpp  Music.hpp  OutputSoundFile.hpp  SoundBuffer.hpp  SoundFileFactory.hpp  SoundFileFactory.inl  SoundFileWriter.hpp  SoundRecorder.hpp  SoundStream.hpp
include/SFML/Graphics/: BlendMode.hpp  Color.hpp  Color.inl  Font.hpp  Glsl.inl  Image.hpp  Rect.hpp  Rect.inl  RenderWindow.hpp  Shader.hpp  StencilMode.hpp  Texture.hpp  Transform.hpp  Transform.inl  Vertex.hpp  VertexBuffer.hpp  View.hpp
include/SFML/Network/: Http.hpp  IpAddress.hpp  Packet.hpp  TcpSocket.hpp  UdpSocket.hpp
include/SFML/System/: Angle.hpp  Angle.inl  FileInputStream.hpp  InputStream.hpp  MemoryInputStream.hpp  String.hpp  Time.hpp  Time.inl  Utf.hpp  Utf.inl  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl
include/SFML/Window/: Event.hpp  Joystick.hpp  Keyboard.hpp  Mouse.hpp  Sensor.hpp  VideoMode.hpp  Window.hpp  WindowBase.hpp  WindowBase.inl  WindowStyle.hpp
src/SFML/: CMakeLists.txt
src/SFML/Audio/: AudioDevice.cpp  CMakeLists.txt  Dependencies.cmake.in  InputSoundFile.cpp  MiniaudioUtils.cpp  MiniaudioUtils.hpp  Music.cpp  OutputSoundFile.cpp  PlaybackDevice.cpp  Sound.cpp  SoundBuffer.cpp  SoundBufferRecorder.cpp  SoundFileFactory.cpp  SoundFileReaderFlac.cpp  SoundFileReaderMp3.cpp  SoundFileReaderMp3.hpp  SoundFileReaderOgg.cpp  SoundFileReaderWav.cpp  SoundFileWriterFlac.cpp  SoundFileWriterFlac.hpp  SoundFileWriterOgg.cpp  SoundFileWriterOgg.hpp  SoundFileWriterWav.cpp  SoundFileWriterWav.hpp  SoundRecorder.cpp  SoundSource.cpp  SoundStream.cpp
src/SFML/Graphics/: BlendMode.cpp  CMakeLists.txt  Font.cpp  Glsl.cpp  Image.cpp  RenderTarget.cpp  RenderTextureImplDefault.cpp  RenderTextureImplDefault.hpp  RenderWindow.cpp  Shader.cpp  StencilMode.cpp  Texture.cpp  VertexBuffer.cpp
src/SFML/Main/: SFMLActivity.cpp
src/SFML/Network/: CMakeLists.txt  Ftp.cpp  Http.cpp  IpAddress.cpp  Packet.cpp  TcpSocket.cpp  UdpSocket.cpp
src/SFML/System/: CMakeLists.txt  FileInputStream.cpp  MemoryInputStream.cpp  String.cpp  Utils.cpp  Utils.hpp
src/SFML/System/Android/: Activity.hpp  ResourceStream.cpp  ResourceStream.hpp  SuspendAwareClock.cpp
src/SFML/System/Unix/: SleepImpl.cpp
src/SFML/Window/: CMakeLists.txt  Dependencies.cmake.in  EglContext.cpp  GlContext.cpp  InputImpl.hpp  JoystickImpl.hpp  Keyboard.cpp  VideoMode.cpp  Window.cpp  WindowBase.cpp  WindowImpl.cpp  WindowImpl.hpp
src/SFML/Window/Android/: InputImpl.cpp  JniHelper.cpp  JniHelper.hpp  JniHelper.inl  JoystickImpl.hpp  SensorImpl.cpp  WindowImplAndroid.cpp  WindowImplAndroid.hpp
src/SFML/Window/DRM/: DRMContext.cpp  DRMContext.hpp  FileDescriptor.cpp  FileDescriptor.hpp  InputImpl.cpp  InputImplUDev.cpp  VideoModeImpl.cpp  WindowImplDRM.cpp  WindowImplDRM.hpp
src/SFML/Window/FreeBSD/: JoystickImpl.cpp
src/SFML/Window/NetBSD/: JoystickImpl.cpp
src/SFML/Window/Unix/: ClipboardImpl.cpp  ClipboardImpl.hpp  GlxContext.cpp  InputImpl.cpp  JoystickImpl.cpp  KeySymToKeyMapping.hpp  KeySymToUnicodeMapping.hpp  KeyboardImpl.cpp  KeyboardImpl.hpp  VideoModeImpl.cpp  VulkanImplX11.cpp  WindowImplX11.cpp  WindowImplX11.hpp
src/SFML/Window/Win32/: ClipboardImpl.cpp  InputImpl.cpp  JoystickImpl.cpp  JoystickImpl.hpp  VideoModeImpl.cpp  VulkanImplWin32.cpp  WglContext.cpp  WindowImplWin32.cpp  WindowImplWin32.hpp
src/SFML/Window/iOS/: EaglContext.mm  InputImpl.mm  SFAppDelegate.mm  SFView.hpp  SensorImpl.mm  WindowImplUIKit.hpp  WindowImplUIKit.mm
src/SFML/Window/macOS/: CursorImpl.mm  HIDInputManager.hpp  HIDInputManager.mm  InputImpl.mm  JoystickImpl.cpp  JoystickImpl.hpp  NSImage+raw.mm  SFContext.mm  SFKeyboardModifiersHelper.h  SFKeyboardModifiersHelper.mm  SFOpenGLView+keyboard.mm  SFWindowController.h  SFWindowController.mm  VideoModeImpl.cpp  WindowImplCocoa.hpp  WindowImplCocoa.mm
test/: CMakeLists.txt
test/Audio/: InputSoundFile.test.cpp  Music.test.cpp  SoundBuffer.test.cpp  SoundFileFactory.test.cpp  SoundRecorder.test.cpp  SoundStream.test.cpp
test/Graphics/: Color.test.cpp  Font.test.cpp  Glsl.test.cpp  Image.test.cpp  Render.test.cpp  RenderStates.test.cpp  RenderTexture.test.cpp  StencilMode.test.cpp  Text.test.cpp  Texture.test.cpp  Transform.test.cpp  Transformable.cpp  VertexBuffer.test.cpp
test/Network/: Packet.test.cpp  UdpSocket.test.cpp
test/System/: FileInputStream.test.cpp  MemoryInputStream.test.cpp  String.test.cpp  Time.test.cpp  Utf.test.cpp
test/TestUtilities/: SystemUtil.cpp  SystemUtil.hpp
test/Window/: Event.test.cpp  VideoMode.test.cpp  Window.test.cpp  WindowBase.test.cpp  WindowHandleWin32.test.cpp  WindowStyle.test.cpp
test/install/: CMakeLists.txt  vcpkg.json
